# PCL_Study

./: README.md  cMake.txt
Common/: CMakeLists.txt  main.cpp
Common/NoteOfDocuments/: MatrixTrans.cpp  NoteOfCustomPointT.cpp  NoteOfCustomPointT.h  NoteOfUsage.cpp
Features/: CMakeLists.txt  main.cpp
Features/NoteOfDocuments/: FPFHOfPointCloud.cpp  GASD.cpp  MomentOfInertiaAnd**.cpp  NARFOfRangeImage.cpp  NormalEstimationUsingIntegralImages.cpp  NormalsOfPointCloud.cpp  PFH.cpp  PointFeatureHistogramsDescriptors.cpp  ROP.cpp  VFH.cpp
Filtering/: CMakeLists.txt  main.cpp
Filtering/NoteOfFiltering/: ExtractingIndices.cpp  ParametricModel.cpp  PassThroughFilter.cpp  RadiusOutlier.cpp  StatisticsOutlierRemovalFilter.cpp  VoxelGridFilter.cpp
IO/: CMakeLists.txt  main.cpp
IO/NoteOfIO/: ConcatenatePointsOfTwoPointClouds.cpp  PCDFileFormat.cpp  ReadPCDFromFile.cpp  WritePointCloudToPCDFile.cpp
KdTree/: CMakeLists.txt
KdTree/NoteOfKdTree/: KdTree.cpp
Octree/: CMakeLists.txt  main.cpp
Octree/NoteOfOctree/: OcTree.cpp  PointCloudCompression.cpp  SpatialChangeDetection.cpp
PCL_Study/: CMakeLists.txt
PCL_Study/NoteOfDocuments/: NoteOfUsage.cpp
RangeImage/: CMakeLists.txt  main.cpp
RangeImage/NoteOfRangeImage/: CreateRangeImageFromPointCloud.cpp  ExtractBordersFromRangeImages.cpp
Recognition/: CMakeLists.txt
Recognition/NoteOfRecongnition/: 3DObjectRecognitonBasedOnCorrespondenceGrouping.cpp
Registration/: CMakeLists.txt  main.cpp
Registration/NoteOfRegistration/: NoteOfAlignmentPrerejective.cpp  NoteOfIncremental.cpp  NoteOfInteractiveClosestPoint.cpp  NoteOfPCLRegistrationAPI.cpp  NoteOfUseIterativeClosesetPoint.cpp
SampleConsensus/: CMakeLists.txt  main.cpp
Segmentation/: CMakeLists.txt  main.cpp
Segmentation/NoteOfSegmentation/: NoteOfClusterExtraction.cpp  NoteOfConditionalClustering.cpp  NoteOfCylinderSeg.cpp  NoteOfDonSementation.cpp  NoteOfMinCutSeg.cpp  NoteOfModelOutlierRemoval.cpp  NoteOfPlanSeg.cpp  NoteOfProgressiveMorFiltering.cpp  NoteOfRegionGrowing.cpp  NoteOfRegionGrowingRGB.cpp
Surface/: CMakeLists.txt  main.cpp
Surface/NoteOfSurface/: NoteOfBsplineFitting.cpp  NoteOfConstruct.cpp  NoteOfGreedyTriangulation.cpp  NoteOfSmoothingEstimation.cpp
